<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="ExtraTranslation">BackRow</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_nav">nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_navlayout">navlayout</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="question">Enter a question</string>
    <string name="answeA">Enter a Answer A</string>
    <string name="answerB">Enter a Answer B</string>
    <string name="answerC">Enter a Answer C</string>
    <string name="Answer">Enter a Correct Answer</string>

    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="show">Show</string>
    <string name="add">Add</string>


    <string name="m1">February: </string>
    <string name="m2">March: </string>
    <string name="m3">April: </string>

    <string name="btn1">Week 01</string>
    <string name="btn2">Week 02</string>
    <string name="btn3">Week 03</string>
    <string name="btn4">Week 04</string>
    <string name="btn9">Week 01</string>
    <string name="btn10">Week 02</string>
    <string name="btn11">Week 03</string>
    <string name="btn12">Week 04</string>

    <string name="comment">Add Comment</string>
    <string name="commentSec">Comments</string>
    <string name="btn5">Delete Viedeo</string>
    <string name="btn6">Update Viedeo</string>
    <string name="btn7">Upload New Video</string>
    <string name="btn8">Upload</string>
    <string name="adminTxt">Manage Viedeo</string>
    <string name="adminTxt2">Upload Video</string>
    <string name="adminTxt3">Lesson name</string>
    <string name="adminTxt4">Date</string>
    <string name="adminTxt5">Week</string>
    <string name="adminTxt6">Description</string>
    <string name="adminTxt7">Week 1 - Lesson name and description</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imagedesc">image details</string>
    <string name="studentid">Student ID</string>
    <string name="hint_studentId">Enter Student Id</string>
    <string name="examname">Exam Name</string>
    <string name="hint_examname">Enter Exam name</string>
    <string name="buttonmarks">Submit</string>
    <string name="exammarks">Exam Marks</string>
    <string name="hintexammarks">Enter exam marks</string>
    <string name="updatedeletebutton">Update/Delete</string>
    <string name="updatemarks">Update</string>
    <string name="deletemarks">Delete</string>
    <string name="listmarksbutton">List Marks</string>
    <string name="marksbutton1">ADD</string>
    <string name="adminMarkingportal">Marks</string>
    <string name="noticetitle">Notice Title</string>
    <string name="noticedes">this is notice description, this feld can be used for display notice about class and details about exams.</string>
    <string name="name">Mr. Anuradha</string>
    <string name="date">09/08/2019</string>
    <string name="noticediscription">Description</string>
    <string name="addnotice">Add</string>
    <string name="reset">Reset</string>
    <string name="addnoticeforbutton">Add Notice</string>
    <string name="listnoticeforbutton">List Notice</string>
    <string name="imagedesczzz">image for title</string>
    <string name="image">Image :</string>
    <string name="choose_image">Choose Image</string>
    <string name="user_notice_img_des">this image will retriew from datebase to user notice</string>
    <string name="listeview_image">this image for display in the list view</string>
    <string name="add_examtype">Add ExamType</string>
    <string name="add_marks">Add Marks</string>
    <string name="list_marks">List Marks</string>
    <string name="back">Back</string>
    <string name="androchunk">Androchunk</string>
    <string name="enter_student_id">Enter Student Id</string>
    <string name="enter_student_marks">Enter Student marks</string>
    <string name="submit">submit</string>
    <string name="backbtn">back</string>
    <string name="studentId">StudentId</string>
    <string name="marks">Marks</string>
    <string name="mrks">Marks</string>
    <string name="studenid">StudentId</string>
    <string name="student_id">Student Id</string>
    <string name="enter_category">Enter category</string>


    <string name="txtId">ADD Question</string>
    <string name="btnchange">Change</string>
    <string name="btnList">List</string>
    <string name="txtManegeView">Manage Users</string>
    <string name="txtUserName">Enter UserName</string>
    <string name="txtUserEmail">Enter Email</string>
    <string name="txtUserPassword">Enter Password</string>
    <string name="txtUserRole">Enter the Role</string>
    <string name="txtUserGender">Enter Gender</string>
    <string name="QuestionID">Enter Question ID</string>
    <string name="userid">Enter USer Id</string>
    <string name="UserId">Enter User ID</string>
    <string name="Final">Final Exam</string>
    <string name="Mid">Mid Exam</string>
    <string name="Spot">Spot Test</string>
    <string name="Asgment1">Assignment1</string>
    <string name="Asgment2">Assignment2</string>
    <string name="Asgment3">Assignment3</string>

    <string-array name="Spinner_Items">
        <item>Final Exam</item>
        <item>Mid Exam</item>
        <item>Spot Test</item>
        <item>Assignment1</item>
        <item>Assignment2</item>
        <item>Assignment3</item>
    </string-array>


    <string-array name="SpinnerList_Items">
        <item>List Marks</item>
        <item>Final Exam</item>
        <item>Mid Exam</item>
        <item>Spot Test</item>
        <item>Assignment1</item>
        <item>Assignment2</item>
        <item>Assignment3</item>
    </string-array>


</resources>
