<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VideoActivity2_Admin">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="204dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/blue"
        android:text="@string/adminTxt2"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="394dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@color/gray"
        android:text="@string/adminTxt3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="394dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@color/gray"
        android:text="@string/adminTxt4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@color/gray"
        android:text="@string/adminTxt5" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@color/gray"
        android:text="@string/adminTxt6" />

    <Button
        android:id="@+id/button"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:background="@color/yelloLight"
        android:text="@string/btn8" />

</LinearLayout>