<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/marksbackground"
    tools:context=".makslistNavigation">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <Button
        android:id="@+id/Final"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/Final"
        android:background="@drawable/navimarkslist"
        android:padding="15dp"/>
    <Button
        android:id="@+id/Mid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/Mid"
        android:background="@drawable/navimarkslist"
        android:padding="15dp"/>
    <Button
        android:id="@+id/Spot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/Spot"
        android:background="@drawable/navimarkslist"
        android:padding="15dp"/>
    <Button
        android:id="@+id/Assignment1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/Asgment1"
        android:background="@drawable/navimarkslist"
        android:padding="15dp"/>
    <Button
        android:id="@+id/Assignment2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/Asgment2"
        android:background="@drawable/navimarkslist"
        android:padding="15dp"/>
    <Button
        android:id="@+id/Assignment3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/Asgment3"
        android:background="@drawable/navimarkslist"
        android:padding="15dp"/>

    </LinearLayout>
    </ScrollView>
</LinearLayout>