<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".addNotice">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="424dp"
        android:layout_height="173dp"
        android:contentDescription="@string/imagedesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/notice" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="94dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/noticetitle"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/editText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="218dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@color/lightgray"
        android:ems="10"
        android:hint="@string/noticetitle"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="94dp"
        android:layout_height="30dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/noticediscription"
        android:textColor="@color/darkGray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/button"
        android:layout_width="134dp"
        android:layout_height="45dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/addnotice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="117dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/design_default_color_primary_dark"
        android:text="@string/reset"
        app:layout_constraintBaseline_toBaselineOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toEndOf="@+id/button" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="327dp"
        android:layout_height="193dp"
        android:layout_marginTop="32dp"
        android:background="@color/lightgray"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="313dp"
            android:layout_height="193dp"
            android:hint="@string/noticediscription" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>