<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   android:background="@drawable/marksbackground"
    tools:context=".submitmarks">



<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

           <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonallignment"
                android:padding="20dp"
                app:srcCompat="@drawable/submitformtitle" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="35dp">

                <EditText
                    android:id="@+id/studentId"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/edittext"
                    android:gravity="center"
                    android:hint="@string/enter_student_id"
                    android:textSize="20dp" />


                <EditText
                    android:id="@+id/marks"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/edittext"
                    android:gravity="center"
                    android:inputType="number"
                    android:layout_marginTop="10dp"
                    android:hint="@string/enter_student_marks"
                    android:textSize="20dp" />


                <Spinner
                    android:id="@+id/coloredSpinner"

                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:layout_marginTop="10dp"

                    android:background="@drawable/marksbuttoncustomized"
                    android:entries="@array/Spinner_Items"
                    android:textAlignment="center">


                </Spinner>


            </LinearLayout>

        <Button
            android:id="@+id/submitbtn"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/circlebutton"
            android:text="@string/submit"/>


        <Button
            android:id="@+id/backbtn"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:background="@drawable/circlebutton"
            android:text="@string/backbtn"/>



    </LinearLayout>
    </ScrollView>
</LinearLayout>