<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/size"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/marksdashbord"
    android:orientation="vertical"
    tools:context=".adminmarkingportal">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="163dp"
        android:background="@drawable/markingportaltheme"
        android:text="@string/adminMarkingportal"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        android:id="@+id/view1" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button

            android:id="@+id/button1"
            android:layout_width="243dp"
            android:layout_height="88dp"


            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="83dp"
            android:layout_marginTop="57dp"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="45sp"
            android:text="@string/marksbutton1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button

            android:id="@+id/noticereset"
            android:layout_width="wrap_content"
            android:layout_height="79dp"


            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="87dp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="81dp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="45sp"
            android:text="@string/updatedeletebutton"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp" />

    </RelativeLayout>

</LinearLayout>